# bgg-dash-viewer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  dash_app.py  project_summary.md  pyproject.toml  tasks.md
.github/workflows/: cloud-run-deploy.yml
assets/: dashAgGridComponentFunctions.js  styles.css
config/: bigquery.yaml
docs/: AUTH_IMPLEMENTATION_PLAN.md  MIGRATION_PLAN.md  table_updates.md
docs/plans/: 2026-04-19-search-pattern-rollout.md  2026-04-30-embeddings-explainer-tab.md
src/: app.py  config.py  landing.py
src/assets/: styles.css
src/auth/: __init__.py  routes.py  user.py  utils.py
src/callbacks/: __init__.py  bigquery_monitoring_callbacks.py  collection_models_callbacks.py  dashboard_callbacks.py  experiments_callbacks.py  filter_callbacks.py  game_ratings_callbacks.py  monitoring_callbacks.py  new_games_callbacks.py  search_callbacks.py  similarity_callbacks.py  upcoming_predictions_callbacks.py
src/components/: __init__.py  ag_grid_config.py  filters.py  footer.py  game_card.py  game_comparison.py  game_details.py  header.py  loading.py  metrics_cards.py
src/data/: bigquery_client.py  experiment_loader.py  similarity_client.py
src/layouts/: bigquery_monitoring.py  collection_models.py  dashboard.py  experiments.py  game_details.py  game_ratings.py  game_search.py  game_similarity.py  home.py  monitoring.py  (+2 more)
static/: landing.css
templates/: landing.html  login.html  register.html
tests/: __init__.py  test_app.py  test_auth.py  test_bigquery_client.py  test_similarity_client.py
(+7 files in other folders)
